extends CharacterBody2D

var active: bool = false
var speed: int = 300
var vulnerable: bool = true
var player_near: bool = false


func _on_notice_area_body_entered(body):
	pass # Replace with function body.


func _on_notice_area_body_exited(body):
	pass # Replace with function body.


func _on_attack_area_body_entered(body):
	pass # Replace with function body.


func _on_attack_area_body_exited(body):
	pass # Replace with function body.
